# ci_cd_helloworld

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  cobertura-coverage.xml  index.CustomMath.cpp.10bf9e405af95767a122576e1f4e9eca.html  index.FirstClass.cpp.473549618ccd1989bc551c6397b8fa68.html  index.SecondClass.cpp.cd670a855670392366a3ab7d563789aa.html  index.SecondClass.h.1fd8cd089a46514405cf14913ed3aa0c.html  index.custom_math.cpp.7c61ed2d8730a06576a9f51f98d9de29.html  index.functions.html  index.html  report.custom_math.cpp.7c61ed2d8730a06576a9f51f98d9de29.html  report.functions.html  report.html
.github/workflows/: release.yml  test.yml  test_push.yml  workflows.yml
src/main/: CMakeLists.txt  CustomMath.cpp  CustomMath.h  FirstClass.cpp  FirstClass.h  Makefile  SecondClass.cpp  SecondClass.h  ci_cd_hello_world  cmake_install.cmake  custom_math.cpp  custom_math.h  main.cpp
src/test/: CMakeLists.txt  CTestTestfile.cmake  Makefile  TestCustomMath.cpp  TestFirstClass.cpp  TestSecondClass.cpp  all_tests[1]_include.cmake  all_tests[1]_tests.cmake  cmake_install.cmake  test-result.xml  test_custom_math.cpp
src/test/Testing/Temporary/: CTestCostData.txt
